--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -28,7 +28,7 @@
         android:title="@string/startDownloadLabel" />
 
     <SwitchPreference
-        android:defaultValue="true"
+        android:defaultValue="false"
         android:key="@string/key_use_rx"
         android:title="@string/useRX" />
 
